fix: content 표시 안 되는 이슈 해결
1. 기존 app.js에 있던 movieContent를 movie 컨테이너 내부로 옮김

2. moive.css에서 :hover 선택자와 display  속성을 통해 커서를 가져다댈 시 설명이 나오도록 함.

3. webkit-scrollbar를 이용해 스크롤 안 보이도록 수정함.

--- a/src/component/Movie.css
+++ b/src/component/Movie.css
@@ -36,3 +36,11 @@
     color: #EFF4F5;
 }
 
+.movie-content {
+    display: none;
+}
+
+.movie-card:hover .movie-content{
+    display: block;
+    z-index: 500;
+}
