--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,17 @@
-body {
-  font-family: 'Noto Sans KR', sans-serif;
-  font-weight: 100; 
-}
-
-.section {
-  padding: 20px;
+main{
+  width: 100vw;
+  height: 100vh;
   background-color: #22254B;
 }
 
 .container {
-  background-color: #22254B;
-  overflow: visible;
+max-width: auto;
+max-height: auto;
+padding: 20px;
 }
 
 .movie-item {
   display: grid;
   grid-template-columns: repeat(8, minmax(170px, 1fr));
   gap: 20px 0;
-}
-
-.movie-content {
-  display: none;
-  z-index: 500;
-}
-
-.movie:hover .movie-content {
-  display: block;
 }
